Add figure, title settings

--- a/Scripts/mypreamble.tex
+++ b/Scripts/mypreamble.tex
@@ -1,5 +1,6 @@
 % My preamble file to define useful package importing
-% and commands definitions
+% and commands definitions.
+% https://github.com/caesar0301/omnilab-misc/raw/master/Scripts/mypreamble.tex
 %
 % Version 0.1.1
 % Xiaming Chen - chenxm35@gmail.com
@@ -70,10 +71,16 @@
 \newcommand{\bftable}{\fontseries{b}\selectfont}
 
 %% Figure files
-\DeclareGraphicsExtensions{.eps,.pdf}
+% \graphicspath{ {./figures/} }
+% \DeclareGraphicsExtensions{.eps,.pdf}
+
+%% For author and affiliations
+% \newcommand{\superscript}[1]{\ensuremath{^{\textrm{#1}}}}
+% \def\wu{\superscript{\dag}}
+% \def\wg{\superscript{\ddag}}
 
 %% Set Letter paper size
-%\setlength{\paperheight}{11in}
-%\setlength{\paperwidth}{8.5in}
-%\usepackage[pass]{geometry}
+% \setlength{\paperheight}{11in}
+% \setlength{\paperwidth}{8.5in}
+% \usepackage[pass]{geometry}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
