--- a/LatexTemplates/preamble.tex
+++ b/LatexTemplates/preamble.tex
@@ -2,11 +2,11 @@
 % My preamble file to define useful package
 % importing and commands definition.
 %
-% Version 0.1.2
+% Version 0.1.3
 % Xiaming Chen - chenxm35@gmail.com
 %
 %% Math
-\usepackage[cmex10]{amsmath}
+\usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{array}
 \usepackage{mathtools}
@@ -36,6 +36,7 @@
 \usepackage{url}
 % \usepackage{cite}
 \usepackage{paralist}
+\usepackage[numbers]{natbib}
 
 %% Theorems
 \theoremstyle{plain}% default
@@ -79,9 +80,4 @@
 %\setlength{\paperwidth}{8.5in}
 %\usepackage[pass]{geometry}
 
-\ifCLASSOPTIONcompsoc
-  \usepackage[nocompress]{cite}
-\else
-  \usepackage{cite}
-\fi
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
